started request endpoints

--- a/art-portfolio/src/main/resources/application.properties
+++ b/art-portfolio/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.profiles.active=production
+spring.datasource.url=jdbc:postgresql://localhost:5432/ArtPortfolio
+spring.datasource.username=postgres
+spring.datasource.password=Password123
+spring.security.user.password=Password123
