--- a/art-portfolio/src/main/resources/application.properties
+++ b/art-portfolio/src/main/resources/application.properties
@@ -3,3 +3,17 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ArtPortfolio
 spring.datasource.username=postgres
 spring.datasource.password=Password123
 spring.security.user.password=Password123
+
+# this just suprresses a warning message we'll see from hibernate
+# when it tries to connect to postgres
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# tells Hibernate that it should generate SQL statements for a Postgres database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+portfolio.app.jwtexpirationms=100000000
+# this is a bad secret
+portfolio.app.jwtsecret=stickers
